# duplicate_guard

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: ADMINISTRATOR.md  CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md
duplicate_guard/: api.py  hooks.py  modules.txt  patches.txt
duplicate_guard/core/: audit.py  exceptions.py  index.py  metadata.py  normalizer.py  search.py  utils.py  validator.py
duplicate_guard/duplicate_guard/doctype/duplicate_guard_settings/: duplicate_guard_settings.js  duplicate_guard_settings.json  duplicate_guard_settings.py
duplicate_guard/duplicate_guard/doctype/duplicate_index/: duplicate_index.json  duplicate_index.py
duplicate_guard/duplicate_guard/doctype/duplicate_report/: duplicate_report.json  duplicate_report.py
duplicate_guard/handlers/: common.py  contact.py  customer.py  employee.py  lead.py  supplier.py
duplicate_guard/scripts/: import_legacy.py
duplicate_guard/setup/: install.py
duplicate_guard/tests/: test_normalizer.py  test_validator.py
